--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
+  
   searchfield: ^0.5.6
   flutter:
     sdk: flutter
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
   firebase_auth: ^3.3.7
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
