--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^3.1.8
   firebase_auth: ^3.3.7
   font_awesome_flutter: ^9.2.0
+  http: ^0.13.4
+  googleapis: ^8.1.0
 
 dev_dependencies:
   flutter_test:
