--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   http: ^0.13.4
   googleapis: ^8.1.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
