--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   http: ^0.13.4
   googleapis: ^8.1.0
   provider: ^6.0.2
+  flutter_slidable: ^1.2.0
+  sqflite: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
