--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_slidable: ^1.2.0
   sqflite: ^2.0.2
   intl: ^0.17.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
