--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   sqflite: ^2.0.2
   intl: ^0.17.0
   url_launcher: ^6.0.20
+  webview_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
