--- a/Documents/apeye/pubspec.yaml
+++ b/Documents/apeye/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   http: ^0.13.4
   googleapis: ^8.1.0
-  provider: ^6.0.2
+  provider: any
   flutter_slidable: ^1.2.0
   sqflite: ^2.0.2
   intl: ^0.17.0
   url_launcher: ^6.0.20
   webview_flutter: ^3.0.1
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   flutter_test:
